--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,5 @@
 == README
+[![Build Status](https://travis-ci.org/biola/wcms-publisher.svg)](https://travis-ci.org/biola/wcms-publisher)
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
