--- a/README.rdoc
+++ b/README.rdoc
@@ -1,29 +1,13 @@
-== README
-[![Build Status](https://travis-ci.org/biola/wcms-publisher.svg)](https://travis-ci.org/biola/wcms-publisher)
+WCMS Publisher
+=================
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Web Content Management System (WCMS) Publisher is the system for managing publishable data for Biola's websites. These include but are not limited to:
+- [biola-edu](https://www.biola.edu)
+- [web-directory](https://www.biola.edu/directory)
+- [student-support](https://studenthub.biola.edu/)
+- [blogs](https://www.biola.edu/blogs)
+- multi-site: which serves up multiple sites.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+##Events
+### From Chapel
+Chapel events are pulled in using a scheduled sidekiq worker.
